<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_principal"
            android:icon="@drawable/icono_inventario"
            android:title="@string/Opcion_Inventario" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/ic_user"
            android:title="@string/Opcion_Usuarios" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_busqueda"
            android:title="Consultar Producto" />
        <item
            android:id="@+id/nav_informacion"
            android:icon="@drawable/ic_acercade"
            android:title="@string/Acercade" />
    </group>
</menu>