<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.InformacionFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="informacion.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <!--Desarrollador1-->
        <TextView
            android:text="@string/DesarrolladoresTXT"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!--Desarrollador2-->
        <TextView
            android:text="@string/DesarrolladoresTXT2"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/CorreoContactoTXT"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/VersionTXT"
            android:gravity="center"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans_regular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--Redes sociales-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <!--Github-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Ir_facebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/github"/>

            <!--MongoDB-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Ir_Instagram"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/mongodb"/>

            <!--NodeJS-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Ir_Youtube"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/nodejs"/>

            <!--Android-->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/Ir_Twitter"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/android"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btnIrTerminos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/custom_btn"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/opensans_regular"
            android:text="@string/Ir_terminos_politicas"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>