<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".view.AgregarProducto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <!--Titulo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <EditText
                android:id="@+id/etcodigopro"
                android:hint="@string/EtCodigo"
                android:textSize="18sp"
                android:maxLines="1"
                android:padding="15dp"
                android:inputType="textCapWords|text"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </com.google.android.material.textfield.TextInputLayout>

        <!--Nombre-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etnombrepro"
                android:hint="@string/EtNombre"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Marca-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etmarcapro"
                android:hint="@string/EtMarca"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textCapWords|text"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Cantidad-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etcantidadpro"
                android:hint="@string/EtCantidad"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="number"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Proveedor-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etproveedorpro"
                android:hint="@string/EtProveedor"
                android:textSize="18sp"
                android:maxLines="1"
                android:inputType="textWebEmailAddress"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Detalle-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etdetallepro"
                android:hint="@string/EtDetalle"
                android:textSize="18sp"
                android:height="150dp"
                android:gravity="start"
                android:inputType="textCapSentences|textMultiLine"
                android:padding="15dp"
                android:fontFamily="@font/opensans_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnregistrarproducto"
                android:layout_width="280dp"
                android:layout_height="55dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/custom_btn"
                android:elevation="6dp"
                android:text="REGISTRAR"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>